--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+
+@theme {
+	--animate-fade-in-right: fade-in-right 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+
+	/**
+ * ----------------------------------------
+ * animation fade-in-right
+ * ----------------------------------------
+ */
+	@keyframes fade-in-right {
+		0% {
+			-webkit-transform: translateX(50px);
+			transform: translateX(50px);
+			opacity: 0;
+		}
+		100% {
+			-webkit-transform: translateX(0);
+			transform: translateX(0);
+			opacity: 1;
+		}
+	}
+}
